--- a/HOLD/requirements.txt
+++ b/HOLD/requirements.txt
@@ -270,7 +270,7 @@ pytz==2024.1
 pyusb==1.2.1
 PyWavelets==1.4.1
 PyYAML==6.0.1
-pyzbar==0.1.9
+pyzbar==0.1.9pip
 pyzmq==25.1.2
 Qt.py==1.3.10
 qtconsole==5.5.1
