added test cases for markdown, pdfviewer, note taking

--- a/serinda.props
+++ b/serinda.props
@@ -27,7 +27,7 @@ whichEyeDisplay=Both
 nluFactory=jsgf
 
 # this is to change it so that if I plug in the glasses camera then I want to use that camera
-singleCamera = True
+useSingleCamera = True
 
 # use the OAK-D or not
 useOakD = False
